--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "daisyui": "^2.0.0",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.1",
     "react": "latest",
     "react-dom": "latest",
     "tailwindcss": "^2.2.19"
