chore: Update npm dependencies for Next.js and transpile modules

--- a/package.json
+++ b/package.json
@@ -23,4 +23,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "eslint"
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.14"
+  }
+}
